# nqueen

./: CMakeLists.txt  main.cpp
.github/workflows/: build-windows.yml
